--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td><input ng-model="student.age"></td>
       <td><input ng-model="student.comment"></td>
       <td><button ng-click="update()">更新</button></td>
-      <td><button ng-click="delete($index)">削除</button></td>
+      <td><button ng-click="delete()">削除</button></td>
     </tr>
     <tr>
       <td>&nbsp;</td>
